--- a/mysite/delphone/templates/delphone/menu.html
+++ b/mysite/delphone/templates/delphone/menu.html
@@ -24,31 +24,31 @@
                 <img alt="logotipo" src= "{% static 'delphone/img/DELPHONE.png' %}">
                 <img alt="DelPhone" src= "{% static 'delphone/img/nome_sem_fundo.png' %}"> 
 		<!-- Botão de Login -->
-                <a class="restrito" href= "{% static 'delphone/login.html' %}"><img alt="cadeado" style="width: 40px" src= "{% static 'delphone/img/cadeado.svg' %}"></a>             
+                <a class="restrito" href= "{% url 'login' %}"><img alt="cadeado" style="width: 40px" src= "{% static 'delphone/img/cadeado.svg' %}"></a>             
               </div>
             </div>
 	    <!-- Barra de navegação -->
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="{% static 'delphone/menu.html' %}">MENU</a>
+                <a class="navbar-brand" href="{% url 'menu' %}">MENU</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href= "{% url 'delphone/como_funcionamos.html' %}">COMO FUNCIONAMOS</a>
+                      <a class="nav-link" href= "{% url 'como_funcionamos' %}">COMO FUNCIONAMOS</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href= "{%  url 'delphone/faq.html' %}" >PERGUNTAS FREQUENTES</a>
+                      <a class="nav-link" href= "{%  url 'faq' %}" >PERGUNTAS FREQUENTES</a>
                     </li>					
                     <li class="nav-item">
-                      <a class="nav-link" href="{%  url 'delphone/sobre_nos.html'  %}">SOBRE NÓS</a>
+                      <a class="nav-link" href="{%  url 'sobre_nos'  %}">SOBRE NÓS</a>
                     </li>					
                     <li class="nav-item">
-                      <a class="nav-link" href="{%  url 'delphone/contatos.html'  %}">CONTATOS</a>
+                      <a class="nav-link" href="{%  url 'contatos'  %}">CONTATOS</a>
                     </li>
                     <li class="cadastro">
-                      <a class="nav-link" href= "{%  url 'delphone/cadastro.html'  %}">CADASTRAR</a>
+                      <a class="nav-link" href= "{%  url 'cadastro'  %}">CADASTRAR</a>
                     </li>
                   </ul>
                 </div>
@@ -138,11 +138,11 @@
 		    <!-- Navegação -->
                     <nav class="redes">
                       <h2>Navegação</h2>
-                        <a href="{%  url  'delphone/menu.html'  %}">Menu</a><br>
-			<a href= "{%  url 'delphone/como_funcionamos.html'  %}">Como funcionamos</a><br>
-                        <a href="{%  url 'delphone/faq.html'  %}">Perguntas frequentes</a><br>
-                        <a href="{%  url 'delphone/sobre_nos.html'  %}">Sobre nós</a><br>
-                        <a href="{%  url 'delphone/contatos.html'  %}">Contatos</a><br>
+                        <a href="{%  url  'menu'  %}">Menu</a><br>
+			                  <a href="{%  url 'como_funcionamos'  %}">Como funcionamos</a><br>
+                        <a href="{%  url 'faq'  %}">Perguntas frequentes</a><br>
+                        <a href="{%  url 'sobre_nos'  %}">Sobre nós</a><br>
+                        <a href="{%  url 'contatos'  %}">Contatos</a><br>
                     </nav>
                 </div>
             </div>
@@ -156,4 +156,4 @@
         
     </body>
 
-</html>
+<>
