--- a/mysite/delphone/templates/delphone/menu.html
+++ b/mysite/delphone/templates/delphone/menu.html
@@ -1,159 +1,73 @@
-{%load static%}
-<!DOCTYPE html>
-<html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>DelPhone</title>
-	<!-- CSS da página -->
-        <link href="{% static 'delphone/style.css' %}" rel="stylesheet">
-	<!-- CSS do Bootstrap -->
-        <link rel="stylesheet" href="{% static 'delphone/bootstrap/bootstrap.min.css' %}">
-        <link rel="sortcut icon" href="{% static 'delphone/img/logotipo.png' %}">
-        <script src="{% static 'delphone/jquery/jquery.min.js' %}"></script>
-        <script src="{% static 'delphone/jquery/popper.min.js' %}"></script>
-        <script src="{% static 'delphone/interaction.js' %}"></script>
-        <script src="{% static 'delphone/bootstrap/bootstrap.min.js' %}"></script>
-    </head>
+{% extends "delphone/base_generic.html" %}
 
-        <body>
-	<!-- Cabeçalho -->
-        <div class="cabecalho">
-            <div class="tiles">
-              <div class="center">
-                <img alt="logotipo" src= "{% static 'delphone/img/DELPHONE.png' %}">
-                <img alt="DelPhone" src= "{% static 'delphone/img/nome_sem_fundo.png' %}"> 
-		<!-- Botão de Login -->
-                <a class="restrito" href= "{% url 'login' %}"><img alt="cadeado" style="width: 40px" src= "{% static 'delphone/img/cadeado.svg' %}"></a>             
-              </div>
-            </div>
-	    <!-- Barra de navegação -->
-            <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="{% url 'menu' %}">MENU</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link" href= "{% url 'como_funcionamos' %}">COMO FUNCIONAMOS</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href= "{%  url 'faq' %}" >PERGUNTAS FREQUENTES</a>
-                    </li>					
-                    <li class="nav-item">
-                      <a class="nav-link" href="{%  url 'sobre_nos'  %}">SOBRE NÓS</a>
-                    </li>					
-                    <li class="nav-item">
-                      <a class="nav-link" href="{%  url 'contatos'  %}">CONTATOS</a>
-                    </li>
-                    <li class="cadastro">
-                      <a class="nav-link" href= "{%  url 'cadastro'  %}">CADASTRAR</a>
-                    </li>
-                  </ul>
-                </div>
-              </nav>
-        </div>
-        
-        <div class="conteudo">
+{% load static %}
+
+{% block content %}        
+  <div class="conteudo">
 	<!-- Carrossel de imagens -->
-            <center>
-                <div id="carrossel1" class="carousel carousel-fade slide col-10" data-ride="carousel">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img class="d-block w-100" src="{% static 'delphone/img/lanche_1.jpg'  %}" alt="First slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="{% static 'delphone/img/lanche_2.jpg'  %}" alt="Second slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src= "{% static 'delphone/img/lanche_3.jpg' %}"  alt="Third slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="{% static 'delphone/img/lanche_4.jpg'  %}" alt="Second slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="{% static 'delphone/img/lanche_5.jpg'  %}" alt="Third slide">
-                      </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carrossel" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carrossel" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
-                  </div>
-            </center>
+    <center>
+      <div id="carrossel1" class="carousel carousel-fade slide col-10" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="{% static 'delphone/img/lanche_1.jpg'  %}" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'delphone/img/lanche_2.jpg'  %}" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src= "{% static 'delphone/img/lanche_3.jpg' %}"  alt="Third slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'delphone/img/lanche_4.jpg'  %}" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'delphone/img/lanche_5.jpg'  %}" alt="Third slide">
+          </div>
         </div>
+        <a class="carousel-control-prev" href="#carrossel" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carrossel" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </center>
+  </div>
 
-        <div class="info space">
-            <div class="hot_dog">
-                <img alt="celular" src= "{% static 'delphone/img/celular_sem_fundo.png'  %}">
-            </div>
-            <div class="text">
-              O objetivo desse website é disponibilizar os contatos de serviços de delivery próximos a você. Além disso, você ainda ajuda o comércio local! Sem risco de desatualização e sem taxas de utilização. Simples assim, rápido, fácil e gratuito!</div>
-        </div>
+  <div class="info space">
+    <div class="hot_dog">
+      <img alt="celular" src= "{% static 'delphone/img/celular_sem_fundo.png'  %}">
+    </div>
+    <div class="text">
+      O objetivo desse website é disponibilizar os contatos de serviços de delivery próximos a você. Além disso, você ainda ajuda o comércio local! Sem risco de desatualização e sem taxas de utilização. Simples assim, rápido, fácil e gratuito!
+    </div>
+  </div>
 		
 	<!-- Carrossel de feedbacks -->	
 	<div class="conteudo">
-            <center>
-                <div id="carrossel2" class="carousel carousel-fade slide col-5" data-ride="carousel">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img class="d-block w-100" src= "{% static 'delphone/img/avaliacao_1.png' %}"  alt="First slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src= "{% static 'delphone/img/avaliacao_2.png'  %}" alt="Second slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src= "{% static 'delphone/img/avaliacao_3.png'  %}" alt="Third slide">
-                      </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carrossel" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carrossel" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
-                  </div>
-            </center>
+    <center>
+      <div id="carrossel2" class="carousel carousel-fade slide col-5" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src= "{% static 'delphone/img/avaliacao_1.png' %}"  alt="First slide">
+          </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src= "{% static 'delphone/img/avaliacao_2.png'  %}" alt="Second slide">
         </div>
-
-	<!-- Rodapé -->
-        <div class="rodape space">
-            <div class="toproda">
-                <div class="roda">
-		    <!-- Redes Sociais -->
-                    <h2>Redes Sociais</h2>
-                    <img alt="Twitter" src= "{% static 'delphone/img/twiter.svg'  %}">
-                    <img alt="YouTube" src= "{% static 'delphone/img/youtube.svg'  %}">
-                    <img alt="Facebook" src="{% static 'delphone/img/facebook.svg'  %}">
-                    <img alt="Instagram" src="{% static 'delphone/img/instagram.svg'  %}">
-                </div>
-                <div class="roda">
-		    <!-- Navegação -->
-                    <nav class="redes">
-                      <h2>Navegação</h2>
-                        <a href="{%  url  'menu'  %}">Menu</a><br>
-			                  <a href="{%  url 'como_funcionamos'  %}">Como funcionamos</a><br>
-                        <a href="{%  url 'faq'  %}">Perguntas frequentes</a><br>
-                        <a href="{%  url 'sobre_nos'  %}">Sobre nós</a><br>
-                        <a href="{%  url 'contatos'  %}">Contatos</a><br>
-                    </nav>
-                </div>
-            </div>
-    
-            <hr>
-	    <!-- Copyright -->
-            <div class="final">
-                @ 2021 DelPhone
-            </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src= "{% static 'delphone/img/avaliacao_3.png'  %}" alt="Third slide">
         </div>
-        
-    </body>
-
-<>
+        <a class="carousel-control-prev" href="#carrossel" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carrossel" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </center>
+  </div>
+{% endblock %}
