--- a/mysite/templates/delphone/menu.html
+++ b/mysite/templates/delphone/menu.html
@@ -50,9 +50,14 @@
     <div class="text">
       O objetivo desse website é disponibilizar os contatos de serviços de delivery próximos a você. Além disso, você ainda ajuda o comércio local! Sem risco de desatualização e sem taxas de utilização. Simples assim, rápido, fácil e gratuito!
     </div>
+    <br>
   </div>
 
 	<!-- Formulário de Cadastro -->
+  <center>
+  <br>
+    <p> Exemplo de busca: {{buscas_ex| cut:"QuerySet"|cut:"<"| cut:">"| cut:"["| cut:"]"|cut:"Busca:"|linebreaks}}
+    </p>
         <form>
             <label for="estado">
             <span>Estado: </span>
@@ -83,7 +88,7 @@
               <option value="SC">Santa Catarina</option>	
               <option value="SP">São Paulo</option>	
               <option value="SE">Sergipe</option>	
-              <option value="TO">Tocantins</option>	
+              <option value="TO">Tocantins</option>
             </select>
 			</label>
 
@@ -5408,6 +5413,7 @@
 			</label>
 
         </form>
+      </center>
 		
 	<!-- Carrossel de feedbacks -->	
 	<div class="conteudo">
